solved alignment  issues

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -3,7 +3,7 @@
     --body-font: "Cardo", serif;
     --midnight: #013d5a;
     --lionsmane: #fcf3e3;
-    --celeste: #bdd3ce;
+    --celeste: #e1ebe9;
     --herb: #708c69;
     --marigold: #f4a25b;
 
@@ -11,15 +11,17 @@
 
 *{
     box-sizing: border-box;
-    max-width: 1200px;
-    margin: 0 auto;
     padding: 0;
     font-family: var(--body-font);
    
     
 }
 
+#pagewrap {
 
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
 
 /************HEADER*******************/
@@ -108,58 +110,107 @@ h2 {
         background-color: var(--midnight);
         color: white;
         padding: 10px;
+        margin-right: 5px;
         border-radius: 5px;
+        font-family: var(--heading-font);
 }
 
 #list-button {
         background-color: var(--midnight);
         color: white;
         padding: 10px;
+        margin-left: 5px;
         border-radius: 5px;
+        font-family: var(--heading-font);
         
 }
+
+.buttons {
+    text-align: center;
+}
 .grid {
-    margin: 0 auto;
+    
     display: grid;
+    place-items: center;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 20px;
     padding: 20px;
+}
+.grid section{
     
-    section{
-        display: flex;
-        flex-direction: column;
-        padding-top: 5px;
-        padding-bottom: 5px;
-        border: 2px solid var(--midnight);
-        width: 300px;
-        
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border: 2px solid var(--midnight);
+    width: 300px;
+}
+    .grid section img {
+        max-width: 100%;
+        max-height: 100px;
+        display: block;
+        margin: auto;
+    }
        
 
-            .name {
-                display: none;
-            }
+    .grid .name {
+        display: none;
     }
    
-}
 
 .list {
     display: flex;
     flex-direction: column;
     padding: 20px;
 
-    section {
+}
+
+.list section {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        margin: 0;
-        padding: 5px;
+        grid-template-columns: 1fr;
+       text-align: left;
+       align-items: baseline;
+        padding: 10px;
+}
+        
+
+        .list section p {
+            margin-left: 0px;
+            font-family: var(--body-font);
+            text-wrap: balance;
+        }
+
+        .list section a {
+            margin-left: 0px;
+            font-family: var(--body-font);
+            color: var(--midnight);
+           
+        }
+
+        .list section a:hover {
+            color: purple;
+        }
+
+        .list section a:visited {
+            color: black;
+        }
+
+        .list section:nth-child(odd) {
+            background-color: var(--celeste);
+        }
+        .name {
+            display: contents;
+            font-weight: bold;
+        }
 
         
-    }
 
-    img {display: none;
-    }
 
-}
+        .list img {display: none;
+        }
+
+
     
 
 
@@ -171,7 +222,7 @@ footer {
     grid-template-columns: 1fr;
     border-top: solid 5px var(--marigold);
     padding-top: 10px;
-    align-items: center;
+    place-items: center;
     
 }
 
@@ -179,6 +230,7 @@ footer p {
     
     text-align: center;
     padding: 20px 0;
+    line-height: 1.5;
 }
 
 footer img {
@@ -189,3 +241,8 @@ footer img {
     font-weight:600;
     
 }
+
+#lastModified {
+    font-size: small;
+}
+
